feat: More works on network :)